[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/njnaruto.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script_cena_vitoria_sasuke.gd" type="Script" id=2]
[ext_resource path="res://Imagens/sons/acerta_shuriken.wav" type="AudioStream" id=3]
[ext_resource path="res://Imagens/sons/BIG5AUDIO_UI & UX_FINAL/03_Select/GUI_Select_29 1 - selec person.wav" type="AudioStream" id=4]
[ext_resource path="res://Imagens/Sasuke Vitoria.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 0.4, 0, 1 )
border_blend = true
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.4, 0, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.4, 0, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sasuke Vitoria" type="Sprite" parent="."]
position = Vector2( 512.168, 300.649 )
scale = Vector2( 1.60053, 1.25372 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Selec" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Button" type="Button" parent="."]
margin_left = 456.571
margin_top = 418.734
margin_right = 581.571
margin_bottom = 465.734
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_pressed = Color( 0.968627, 0.647059, 0.333333, 1 )
text = "inicio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 196.735
margin_top = 318.919
margin_right = 681.735
margin_bottom = 431.919
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "patetico "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
